--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
         <!-- Logo -->
         <div class="flex items-center">
-          <img src="assets/logo.jpg" alt="Logo" class="h-12 w-auto md:h-16"/>
+          <img src="src/assets/logo.jpg" alt="Logo" class="h-12 w-auto md:h-16"/>
         </div>
         
         <!-- Secciones -->
@@ -156,10 +156,10 @@
       </div>
       <h2 class="text-4xl font-bold text-center mt-8 mb-8 text-celeste drop-shadow-[0_2px_2px_rgba(0,0,0,0.2)]">Nuestros Clientes</h2>
       <div class="max-w-5xl mx-auto grid md:grid-cols-4 gap-6 items-center">
-        <img src="assets/logo.jpg" alt="Cliente 1" class="mx-auto h-50 rounded-2xl shadow-lg w-full transition duration-500 hover:scale-105">
-        <img src="assets/logo.jpg" alt="Cliente 2" class="mx-auto h-50 rounded-2xl shadow-lg w-full transition duration-500 hover:scale-105">
-        <img src="assets/logo.jpg" alt="Cliente 3" class="mx-auto h-50 rounded-2xl shadow-lg w-full transition duration-500 hover:scale-105">
-        <img src="assets/logo.jpg" alt="Cliente 4" class="mx-auto h-50 rounded-2xl shadow-lg w-full transition duration-500 hover:scale-105">
+        <img src="src/assets/logo.jpg" alt="Cliente 1" class="mx-auto h-50 rounded-2xl shadow-lg w-full transition duration-500 hover:scale-105">
+        <img src="src/assets/logo.jpg" alt="Cliente 2" class="mx-auto h-50 rounded-2xl shadow-lg w-full transition duration-500 hover:scale-105">
+        <img src="src/assets/logo.jpg" alt="Cliente 3" class="mx-auto h-50 rounded-2xl shadow-lg w-full transition duration-500 hover:scale-105">
+        <img src="src/assets/logo.jpg" alt="Cliente 4" class="mx-auto h-50 rounded-2xl shadow-lg w-full transition duration-500 hover:scale-105">
       </div>
     </section>
 
